[metadata]
name = colcon-export-command
version = attr: colcon_export_command.__version__
url = https://github.com/maciejmatuszak/colcon-export-command
project_urls =
    Changelog = https://github.com/maciejmatuszak/colcon-export-command/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/maciejmatuszak/colcon-export-command/
author = Maciej Matuszak
author_email = maciej.matuszak@gmail.com
maintainer = Maciej Matuszak
maintainer_email = maciej.matuszak@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to export Command in json format
long_description = file: README.rst
keywords = colcon json export cmake

[options]
packages = find:
install_requires =
    colcon-core>=0.3.8
    xsdata~=22.2
tests_require =
    flake8>=3.6.0
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
    pylint
    pytest
    pytest-cov
    scspell3k>=2.2

zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-export-command

[options.entry_points]
colcon_core.event_handler =
    json_export = colcon_export_command.event_handler.JsonCommandExporter:JsonCommandExporter

colcon_core.environment_variable =
    json_export_path = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_PATH
    json_export_clion0 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION
    json_export_clion1 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_PROFILE_ENABLED
    json_export_clion2 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_PROFILE_NAME
    json_export_clion3 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_ENV_VARS
    json_export_clion4 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_BUILD_OPTIONS
    json_export_clion5 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_TOOLCHAIN
    json_export_clion6 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_BUILD_TYPE
    json_export_clion7 = colcon_export_command.event_handler:EV_COLCON_COMMAND_EXPORT_CLION_PASS_SHELL_ENV




[pep8]
max-line-length = 120

[flake8]
max-line-length = 120

[pylint]
--method-naming-style = camelCase
--function-naming-style = camelCase

[yapf]
based_on_style = google
column_limit = 120

; do not mix inline and separate line arguments it is confusing
SPLIT_ALL_COMMA_SEPARATED_VALUES = False